# TDXAgent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README_CN.md  SECURITY.md  install.py  pyproject.toml  requirements-dev.txt  requirements-gmail.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: gmail_oauth_fix.md  oauth_consent_screen_guide.md
prompts/: pure_investment_analysis.yaml
src/: __init__.py  main.py
src/config/: __init__.py  config_manager.py  default_config.yaml
src/llm/: __init__.py  base_provider.py  claude_provider.py  gemini_cli_provider.py  gemini_provider.py  openai_provider.py
src/processors/: __init__.py  batch_processor.py  integration_manager.py  prompt_manager.py  report_generator.py  template_quality_checker.py
src/scrapers/: __init__.py  base_scraper.py  discord_scraper.py  gmail_scraper.py  telegram_scraper.py  twitter_scraper.py
src/storage/: __init__.py  data_formatter.py  jsonl_storage.py  media_storage.py  message_converter.py  optimized_message_converter.py
src/utils/: __init__.py  config_validator.py  helpers.py  link_generator.py  logger.py  prompt_file_manager.py  retry_handler.py  validators.py
